[gd_scene load_steps=5 format=3 uid="uid://dameelfdwsxx4"]

[ext_resource type="Script" path="res://src/SpellListPanel.gd" id="1_pie6y"]
[ext_resource type="Script" path="res://src/HUD.gd" id="1_wgdhm"]
[ext_resource type="Script" path="res://src/SpellPanel.gd" id="2_4jnvy"]
[ext_resource type="PackedScene" uid="uid://bqx1fxmk5xqqk" path="res://scenes/spells/slow_debuff.tscn" id="2_twp7k"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_wgdhm")

[node name="SpellListPanel" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -48.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_pie6y")

[node name="HBoxContainer" type="HBoxContainer" parent="SpellListPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlowDebuff" parent="SpellListPanel/HBoxContainer" instance=ExtResource("2_twp7k")]
position = Vector2(24, 24)

[node name="CastingPanel" type="PanelContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -345.5
offset_right = 345.5
offset_bottom = 43.0
grow_horizontal = 2
script = ExtResource("2_4jnvy")

[node name="MarginContainer" type="MarginContainer" parent="CastingPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="SpellText" type="RichTextLabel" parent="CastingPanel/MarginContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.581033, 0.581033, 0.581033, 1)
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[connection signal="_on_spell_casted" from="CastingPanel" to="." method="_on_casting_panel__on_spell_casted"]
